--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,32 +7,76 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="wrapper">
-    <form action="dashboard.html">
-  <h2>Login</h2>
-  <img src="logo.png" alt="CSCQC Logo" class="logo">
 
-  <div class="input-field">
-    <input type="text" required>
-    <label>Enter your email</label>
-  </div>
+<div class="wrapper">
+  <form id="loginForm">
+    <h2>Login</h2>
+    <img src="logo.png" alt="CSCQC Logo" class="logo">
 
-  <div class="input-field">
-    <input type="password" required>
-    <label>Enter your password</label>
-  </div>
+    <div class="input-field">
+      <input type="email" required>
+      <label>Enter your email</label>
+    </div>
 
-  <div class="forget">
-    <label for="remember">
-      <input type="checkbox" id="remember">
-      <p>Remember me</p>
-    </label>
-    <a href="#">Forgot password?</a>
-  </div>
+    <div class="input-field">
+      <input type="password" required>
+      <label>Enter your password</label>
+    </div>
 
-  <button type="submit">Log In</button>
+    <div class="forget">
+      <label for="remember">
+        <input type="checkbox" id="remember">
+        <p>Remember me</p>
+      </label>
+      <a href="#">Forgot password?</a>
+    </div>
 
-  <div class="register">
-    <p>Don't have an account? <a href="register.html">Register</a></p>
-  </div>
-</form>
+    <button type="submit">Log In</button>
+
+    <div class="register">
+      <p>Don't have an account? <a href="register.html">Register</a></p>
+    </div>
+  </form>
+</div>
+
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+  import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+
+  const firebaseConfig = {
+    apiKey: "AIzaSyAGRHrBAzRJ2tYT_wghel2RDAj3_rxS6wU",
+    authDomain: "cscqc-enrollment-system.firebaseapp.com",
+    projectId: "cscqc-enrollment-system",
+    storageBucket: "cscqc-enrollment-system.appspot.com",
+    messagingSenderId: "348208365849",
+    appId: "1:348208365849:web:fef2c8ffefd1a67068c588"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+
+  const form = document.getElementById("loginForm");
+
+  form.addEventListener("submit", async (e) => {
+    e.preventDefault();
+
+    const email = form.querySelector('input[type="email"]').value;
+    const password = form.querySelector('input[type="password"]').value;
+
+    try {
+      const userCredential = await signInWithEmailAndPassword(auth, email, password);
+      // Save user info to localStorage (optional)
+      localStorage.setItem('currentUser', JSON.stringify({
+        uid: userCredential.user.uid,
+        displayName: userCredential.user.displayName,
+        email: userCredential.user.email
+      }));
+      window.location.href = "dashboard.html";
+    } catch (error) {
+      alert(error.message);
+    }
+  });
+</script>
+
+</body>
+</html>
