--- a/register.html
+++ b/register.html
@@ -8,40 +8,81 @@
 </head>
 <body>
 
-  <div class="wrapper">
-    <!-- LOGO -->
-    <img src="logo.png" alt="CSCQC Logo" class="logo">
+<div class="wrapper">
+  <img src="logo.png" alt="CSCQC Logo" class="logo">
 
-    <form id="registerForm">
-      <h2>Student Registration</h2>
+  <form id="registerForm">
+    <h2>Student Registration</h2>
 
-      <div class="input-field">
-        <input type="text" required>
-        <label>Full Name</label>
-      </div>
+    <div class="input-field">
+      <input type="text" required>
+      <label>Full Name</label>
+    </div>
 
-      <div class="input-field">
-        <input type="email" required>
-        <label>Email</label>
-      </div>
+    <div class="input-field">
+      <input type="email" required>
+      <label>Email</label>
+    </div>
 
-      <div class="input-field">
-        <input type="password" required>
-        <label>Password</label>
-      </div>
+    <div class="input-field">
+      <input type="password" required>
+      <label>Password</label>
+    </div>
 
-      <div class="input-field">
-        <input type="password" required>
-        <label>Confirm Password</label>
-      </div>
+    <div class="input-field">
+      <input type="password" required>
+      <label>Confirm Password</label>
+    </div>
 
-      <button type="submit">Register</button>
+    <button type="submit">Register</button>
 
-      <div class="register">
-        <p>Already have an account? <a href="index.html">Login</a></p>
-      </div>
-    </form>
-  </div>
+    <div class="register">
+      <p>Already have an account? <a href="index.html">Login</a></p>
+    </div>
+  </form>
+</div>
+
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+  import { getAuth, createUserWithEmailAndPassword, updateProfile } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+
+  const firebaseConfig = {
+    apiKey: "AIzaSyAGRHrBAzRJ2tYT_wghel2RDAj3_rxS6wU",
+    authDomain: "cscqc-enrollment-system.firebaseapp.com",
+    projectId: "cscqc-enrollment-system",
+    storageBucket: "cscqc-enrollment-system.appspot.com",
+    messagingSenderId: "348208365849",
+    appId: "1:348208365849:web:fef2c8ffefd1a67068c588"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+
+  const form = document.getElementById('registerForm');
+
+  form.addEventListener('submit', async (e) => {
+    e.preventDefault();
+
+    const name = form.querySelector('input[type="text"]').value.trim();
+    const email = form.querySelector('input[type="email"]').value.trim();
+    const password = form.querySelectorAll('input[type="password"]')[0].value;
+    const confirm = form.querySelectorAll('input[type="password"]')[1].value;
+
+    if(password !== confirm){
+      alert("Passwords do not match!");
+      return;
+    }
+
+    try {
+      const userCredential = await createUserWithEmailAndPassword(auth, email, password);
+      await updateProfile(userCredential.user, { displayName: name });
+      alert("Registration successful! Please log in.");
+      window.location.href = "index.html";
+    } catch (error) {
+      alert(error.message);
+    }
+  });
+</script>
 
 </body>
 </html>
