--- a/profile.html
+++ b/profile.html
@@ -162,7 +162,7 @@
     <img src="logo.png" alt="CSCQC Logo" width="40">
     <span>CSCQC Enrollment System</span>
   </div>
-  <a href="dashboard.html" class="logout-btn">Back</a>
+  <a href="dashboard.html" class="logout-btn" id="logoutBtn">Logout</a>
 </header>
 
 <div class="dashboard">
@@ -190,62 +190,107 @@
 
 </div>
 
-<script>
-  // Default placeholder image
-  const placeholderPic = "https://via.placeholder.com/120/7d2ae8/ffffff?text=Profile";
+<!-- Firebase SDK -->
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+  import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+  import { getFirestore, doc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-  // Load profile from localStorage or use defaults
-  let profile = JSON.parse(localStorage.getItem('profile')) || {
-    name: "Bill Bernaldo",
-    email: "billpogi@gmail.com",
-    studentID: "CSC12345",
-    picture: placeholderPic
+  const firebaseConfig = {
+    apiKey: "AIzaSyAGRHrBAzRJ2tYT_wghel2RDAj3_rxS6wU",
+    authDomain: "cscqc-enrollment-system.firebaseapp.com",
+    projectId: "cscqc-enrollment-system",
+    storageBucket: "cscqc-enrollment-system.appspot.com",
+    messagingSenderId: "348208365849",
+    appId: "1:348208365849:web:fef2c8ffefd1a67068c588"
   };
+
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+  const db = getFirestore(app);
 
   const profilePic = document.getElementById('profile-pic');
   const profileInfo = document.getElementById('profile-info');
   const profilePicInput = document.getElementById('profilePicInput');
+  const logoutBtn = document.getElementById('logoutBtn');
 
-  function renderProfile() {
-    profilePic.src = profile.picture || placeholderPic;
-    profileInfo.innerHTML = `
-      <p><strong>Full Name:</strong> ${profile.name}</p>
-      <p><strong>Email:</strong> ${profile.email}</p>
-      <p><strong>Student ID:</strong> ${profile.studentID}</p>
-      <button class="edit-btn" onclick="editProfile()">Edit Profile</button>
-    `;
-  }
+  const placeholderPic = "https://via.placeholder.com/120/7d2ae8/ffffff?text=Profile";
 
-  function editProfile() {
-    const newName = prompt("Enter your full name:", profile.name);
-    const newEmail = prompt("Enter your email:", profile.email);
-    const newID = prompt("Enter your student ID:", profile.studentID);
-
-    if(newName && newEmail && newID) {
-      profile.name = newName;
-      profile.email = newEmail;
-      profile.studentID = newID;
-      localStorage.setItem('profile', JSON.stringify(profile));
-      renderProfile();
-      alert("Profile updated successfully!");
-    }
-  }
-
-  // Profile picture upload
-  profilePicInput.addEventListener('change', function() {
-    const file = this.files[0];
-    if(file) {
-      const reader = new FileReader();
-      reader.onload = function(e) {
-        profile.picture = e.target.result; // Save base64
-        localStorage.setItem('profile', JSON.stringify(profile));
-        profilePic.src = profile.picture;
-      }
-      reader.readAsDataURL(file);
-    }
+  // Logout
+  logoutBtn.addEventListener('click', async () => {
+    await signOut(auth);
+    window.location.href = "index.html";
   });
 
-  renderProfile();
+  onAuthStateChanged(auth, async user => {
+    if(!user) {
+      window.location.href = "index.html";
+      return;
+    }
+
+    const userId = user.uid;
+    const userDocRef = doc(db, "users", userId);
+
+    // Load Firestore data
+    const userSnap = await getDoc(userDocRef);
+    let profile = {};
+    if(userSnap.exists()) {
+      profile = userSnap.data();
+    }
+
+    // Defaults if undefined
+    profile.name = profile.name || user.displayName || "Student Name";
+    profile.email = profile.email || user.email || "noemail@example.com";
+    profile.studentID = profile.studentID || "CSC" + Math.floor(Math.random()*100000);
+    profile.picture = profile.picture || placeholderPic;
+
+    // Save back to Firestore if new
+    await setDoc(userDocRef, profile);
+
+    // Render profile
+    function renderProfile() {
+      profilePic.src = profile.picture;
+      profileInfo.innerHTML = `
+        <p><strong>Full Name:</strong> ${profile.name}</p>
+        <p><strong>Email:</strong> ${profile.email}</p>
+        <p><strong>Student ID:</strong> ${profile.studentID}</p>
+        <button class="edit-btn" id="editProfileBtn">Edit Profile</button>
+      `;
+      document.getElementById('editProfileBtn').addEventListener('click', editProfile);
+    }
+
+    // Edit profile
+    function editProfile() {
+      const newName = prompt("Enter your full name:", profile.name);
+      const newEmail = prompt("Enter your email:", profile.email);
+      const newID = prompt("Enter your student ID:", profile.studentID);
+
+      if(newName && newEmail && newID) {
+        profile.name = newName;
+        profile.email = newEmail;
+        profile.studentID = newID;
+        setDoc(userDocRef, profile); // Save changes to Firestore
+        renderProfile();
+        alert("Profile updated successfully!");
+      }
+    }
+
+    // Profile picture upload
+    profilePicInput.addEventListener('change', function() {
+      const file = this.files[0];
+      if(file) {
+        const reader = new FileReader();
+        reader.onload = async function(e) {
+          profile.picture = e.target.result; // base64
+          await setDoc(userDocRef, profile);
+          profilePic.src = profile.picture;
+        }
+        reader.readAsDataURL(file);
+      }
+    });
+
+    renderProfile();
+  });
 </script>
 
 </body>
